--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -81,30 +81,22 @@ Here we describe the main features of Ants-Review.
 Thus, the system acts also as a reputation builder. 
 \newline Moreover, to encourage commitment, reviewers who contribute consistently to multiple rounds of reviews exchange to the same manuscript can have their tokens accrue interest over time (see Implementation).
 
-\paragraph{Transparency and re-usability of the records.} The peer-review history, including authors' replies and editors' recommendations, should be openly and permanently accessible to the community ('open report' of open peer-reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer-review consortia, such as the Neuroscience Peer Review Consortium and independent companies like ResearchSquare and Peerage of Science \cite{Peerage}, peer-reviews in Ants-Review will be transferable ('cascading' or 'portable peer-reviews').
+\paragraph{Transparency and re-usability of the records.} The peer-review history, including authors' replies and editors' recommendations, should be openly and permanently accessible to the community ('open report' of open peer-reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer-review consortia, such as the Neuroscience Peer Review Consortium \cite{NeuroPeerCons} and independent companies like ResearchSquare and Peerage of Science \cite{Peerage}, peer-reviews in Ants-Review will be transferable ('cascading' or 'portable peer-reviews').
 
 \paragraph{Accountability via pseudo-anonymity.} In order to counteract malicious behaviour (see 2.1) affecting the integrity of the reviews but also to righteously attribute the intellectual contributions making sure there are no conflict of interest, it's important to be able to track back the identities of the contributors to a peer-review report. This is possible if the platform acts like a version control system where commits are permanent and their hashes timestamped. InterPlanetary File System (IPFS) \cite{IPFS} is a decentralized content-addressable, peer-to-peer protocol which guarantees data immutability and unique file identification.
 \newline To prevent retaliation for negative peer-reviews and to promote the participation of early researchers who might feel intimidated to judge the scientific work of senior authors, the Ants-Review system still engages into maintaining the privacy of both authors and reviewers in a double-blind approach.
 
-\paragraph{Inclusiveness via gamification.} As a final step we propose that all the community is involved in the process of peer-reviewing abolishing the editorial selection process ('open participation', 'open interaction', 'open platform' \cite{OPR-Ross-Hellauer}). In this way the pool of reviewer is enriched and allows younger researchers to get the appropriate training through interactive feedback. An interesting addition would be to introduce Quadratic Voting (QV) for the reviews' evaluation. 
-
+\paragraph{Inclusiveness via gamification.} As a final step we propose that all the community is involved in the process of peer-reviewing abolishing the editorial selection process ('open participation', 'open interaction', 'open platform' \cite{OPR-Ross-Hellauer}). In this way, the pool of reviewer is enriched and allows younger researchers to get the appropriate training through interactive feedback. Moreover, peer-reviews could be evaluated, commented, criticised by the other members of the scientific community, ensuring a virtuous loop of verification. \newline An interesting addition would be to introduce Quadratic Voting (QV) \cite{QVWeyl} for the reviews' evaluation. QV replaces the discrete concept of one-person-one-vote with the non-linear one of n vote at the cost of n \sqrt{2} and is optimal in the context of multiple choices. If we consider scientific outputs as public goods, then the community can vote (with voting tokens) 'how much they care' for a specific peer-review. A rank of peer-reviews would result from the voting process, with a more fine-graded distribution that might reflect issues that have a high value to few people and low value to more people. \newline Finally, it's conceivable that the members of the community participate to the share of the tokens by voting to the best peer-reviews. This solution would create a self-reinforcing ethical behaviour where the fair evaluation of peer-reviews would be also in the interest of the agents at play.
 
 There are two possible scenarios depending if Ants-Review integrates an existing journal or if Ants-Review becomes a platform completely decoupled from journals.
 
-\subsubsection{Ants-Review process: scenario 1 (journal-dependent)}
-
 \begin{enumerate}
-    \item The author submits a manuscript to the journal.
-    \item If the papers passes the stages of editorial decision (appropriateness of style and coherence with the journal's scope)
-    \item The editor issues a bounty (\emph{bounty issuance}) for the paper review. Fulfillment rules are set in a smart-contract.
-    \item The bounty prize could correspond to part of the article submission fees and article publication fees requested to the authors by the journal.
-    \item Reviews fulfilling the smart-contract requirements are validated by the journal editors.
-    \item When the reviews are accepted (\emph{bounty fulfillment}), reviewers awarded a token called \emph{ANT}.
-    \item Not all reviews will have the same quality and depth. However, each of them might bring up one or more relevant contribution for the sake of improving the manuscript. In order to redistribute the bounty in a fair manner across reviewers, reviews will be voted by the members of the community via Quadratic Voting to rank the best peer-reviews.
+    \item \textbf{Ants-Review process: scenario 1 (journal-dependent)}: 1. The author submits a manuscript to the journal. 2. If the papers passes the stages of editorial decision (appropriateness of style and coherence with the journal's scope). 3. The editor issues a bounty (\emph{bounty issuance}) for the paper review. Fulfillment rules are set in a smart-contract. 4. The bounty prize could correspond to part of the article submission fees and article publication fees requested to the authors by the journal. 5. Reviews fulfilling the smart-contract requirements are validated by the journal editors. 6. When the reviews are accepted (\emph{bounty fulfillment}), reviewers are awarded a token called \emph{ANT}.
+    \item \textbf{Ants-Review process: scenario 2 (community-driven)}: 
 
 \end{enumerate}
 
-\subsubsection{Ants-Review process: scenario 2 (community-driven)}:
+
 
 \begin{enumerate}
 \item The author submits a manuscript to the pre-print service or to an hypothetical Ants-Review platform.
