--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -43,8 +43,8 @@ Independent Blockchain Engineer, London, UK \\
 \maketitle              % typeset the header of the contribution
 %
 \begin{abstract}
-Peer-review is a necessary and essential quality control step for scientific publications. However, the process, which is very costly in terms of time investment, not only is not remunerated but it’s also not recognized by the academic community as a relevant scientific output for a researcher. Therefore, scientific dissemination is affected. Here, to solve this issue, we propose a blockchain-based incentive protocol that rewards scientists also for their contributions to other scientists’ work and that builds up a reputational system. We designed a Protocol of smart contracts called Ants-Review that allows any author to issue a call for peer-reviewing their scientific publication. If requirements are met, peer-reviews will be accepted and payed by the Issuer. To promote ethical behaviour the system will implement an incentive mechanism on Ants-Review.
-\keywords{Blockchain  \and Open Science \and Privacy \and Peer-review \and Incentivization.}
+Peer-review is a necessary and essential quality control step for scientific publications but lacks proper  incentives. Indeed, the process, which is very costly in terms of time and intellectual investment, not only is not remunerated by the journals but it is also not openly recognized by the academic community as a relevant scientific output for a researcher. Therefore, scientific dissemination is affected in the timeliness, quality and fairness. Here, to solve this issue, we propose a blockchain-based incentive system that rewards scientists for peer-reviewing other scientists’ work and that builds up a reputational metric. We designed a protocol of smart contracts called Ants-Review that allows authors or editors to issue a bounty call for peer-reviewing pseudo-anonymously but in an open report a scientific manuscript. If requirements are met, peer-reviews will be accepted and payed by the Issuer proportionally to their quality and  constructiveness, judged by the editor or the community via Quadratic Voting (QV). To promote ethical behaviour and inclusiveness the system could implement a gamified mechanism that allows the whole community to evaluate the peer-reviews, vote for the best ones and share the incentives with the referees. 
+\keywords{Blockchain  \and Open Science \and Peer-review \and Incentivization.}
 \end{abstract}
 %
 %
@@ -76,39 +76,25 @@ In this paper we propose Ants-Review, a new incentivisation mechanism built on a
 \subsection{Design}
 
 Here we describe the main features of Ants-Review.
-\paragraph{Incentivisation and recognition.} A typical business model for open source software (OSS) movement is open-source bounty. Bounties are a prize or monetary reward given for completing a task before a deadline. Examples of such platforms that allow funders (bounty backers) to pay developers (bounty hunters) for open source contributions are Gitcoin \cite{Gitcoin} and The Bounties Network \cite{Bounty}. Incentives can be cryptographic tokens, unit of values registered on a blockchain network and that represent the quantity and quality of a service within a network. 
+\paragraph{Incentivisation and recognition.} A typical business model for open source software (OSS) movement is open-source bounty. Bounties are a prize or monetary reward given for completing a task before a deadline \cite{BountyGit}. Examples of such platforms that allow funders (bounty backers) to pay developers (bounty hunters) for open source contributions are Gitcoin \cite{Gitcoin} and The Bounties Network \cite{Bounty}. Incentives can be cryptographic tokens, unit of values registered on a blockchain network and that represent the quantity and quality of a service within a network. 
 \newline In the network of the scientific community reviewers provide a service and those who consume it (authors, journals)  should be able to retribute with tokens, an internal cryptocurrency that can be spent externally. The amount of tokens reflects material and symbolic recognition of the performed work that can be statistically quantified for author-level metrics measuring the productivity and impact of a researcher. 
 Thus, the system acts also as a reputation builder. 
 \newline Moreover, to encourage commitment, reviewers who contribute consistently to multiple rounds of reviews exchange to the same manuscript can have their tokens accrue interest over time (see Implementation).
 
-\paragraph{Transparency and re-usability of the records.} The peer-review history, including authors' replies and editors' recommendations, should be openly and permanently accessible to the community ('open report' of open peer-reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer-review consortia, such as the Neuroscience Peer Review Consortium \cite{NeuroPeerCons} and independent companies like ResearchSquare and Peerage of Science \cite{Peerage}, peer-reviews in Ants-Review will be transferable ('cascading' or 'portable peer-reviews').
+\paragraph{Transparency and re-usability of the records.} The peer-review history, including authors' replies and editors' recommendations, should be openly and permanently accessible to the community ('open report' of open peer-reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer-review consortia, such as the Neuroscience Peer Review Consortium \cite{NeuroPeerCons} and independent companies like ResearchSquare \cite{ResSqu} and Peerage of Science \cite{Peerage}, peer-reviews in Ants-Review will be transferable ('cascading' or 'portable peer-reviews').
 
 \paragraph{Accountability via pseudo-anonymity.} In order to counteract malicious behaviour (see 2.1) affecting the integrity of the reviews but also to righteously attribute the intellectual contributions making sure there are no conflict of interest, it's important to be able to track back the identities of the contributors to a peer-review report. This is possible if the platform acts like a version control system where commits are permanent and their hashes timestamped. InterPlanetary File System (IPFS) \cite{IPFS} is a decentralized content-addressable, peer-to-peer protocol which guarantees data immutability and unique file identification.
 \newline To prevent retaliation for negative peer-reviews and to promote the participation of early researchers who might feel intimidated to judge the scientific work of senior authors, the Ants-Review system still engages into maintaining the privacy of both authors and reviewers in a double-blind approach.
 
-\paragraph{Inclusiveness via gamification.} As a final step we propose that all the community is involved in the process of peer-reviewing abolishing the editorial selection process ('open participation', 'open interaction', 'open platform' \cite{OPR-Ross-Hellauer}). In this way, the pool of reviewer is enriched and allows younger researchers to get the appropriate training through interactive feedback. Moreover, peer-reviews could be evaluated, commented, criticised by the other members of the scientific community, ensuring a virtuous loop of verification. \newline An interesting addition would be to introduce Quadratic Voting (QV) \cite{QVWeyl} for the reviews' evaluation. QV replaces the discrete concept of one-person-one-vote with the non-linear one of n vote at the cost of n \sqrt{2} and is optimal in the context of multiple choices. If we consider scientific outputs as public goods, then the community can vote (with voting tokens) 'how much they care' for a specific peer-review. A rank of peer-reviews would result from the voting process, with a more fine-graded distribution that might reflect issues that have a high value to few people and low value to more people. \newline Finally, it's conceivable that the members of the community participate to the share of the tokens by voting to the best peer-reviews. This solution would create a self-reinforcing ethical behaviour where the fair evaluation of peer-reviews would be also in the interest of the agents at play.
+\paragraph{Inclusiveness via gamification.} As a final step we propose that all the community is involved in the process of peer-reviewing abolishing the editorial selection process ('open participation', 'open interaction', 'open platform' \cite{OPR-Ross-Hellauer}). In this way, the pool of reviewer is enriched and allows younger researchers to get the appropriate training through interactive feedback. Moreover, peer-reviews could be evaluated, commented, criticised by the other members of the scientific community, ensuring a virtuous loop of verification. \newline An interesting addition would be to introduce Quadratic Voting (QV) \cite{QVWeyl} for the reviews' evaluation. QV replaces the discrete concept of one-person-one-vote with the non-linear one of n vote at the cost of $n^2$ and is optimal in the context of multiple choices. If we consider scientific outputs as public goods, then the community can vote (with voting tokens) 'how much they care' for a specific peer-review. A rank of peer-reviews would result from the voting process, with a more fine-graded distribution that might reflect issues that have a high value to few people and low value to more people. \newline Finally, it's conceivable that the members of the community participate to the share of the tokens by voting to the best peer-reviews. This solution would create a self-reinforcing ethical behaviour where the fair evaluation of peer-reviews would be also in the interest of the agents at play.
 
 There are two possible scenarios depending if Ants-Review integrates an existing journal or if Ants-Review becomes a platform completely decoupled from journals.
 
 \begin{enumerate}
-    \item \textbf{Ants-Review process: scenario 1 (journal-dependent)}: 1. The author submits a manuscript to the journal. 2. If the papers passes the stages of editorial decision (appropriateness of style and coherence with the journal's scope). 3. The editor issues a bounty (\emph{bounty issuance}) for the paper review. Fulfillment rules are set in a smart-contract. 4. The bounty prize could correspond to part of the article submission fees and article publication fees requested to the authors by the journal. 5. Reviews fulfilling the smart-contract requirements are validated by the journal editors. 6. When the reviews are accepted (\emph{bounty fulfillment}), reviewers are awarded a token called \emph{ANT}.
-    \item \textbf{Ants-Review process: scenario 2 (community-driven)}: 
+    \item \textbf{Ants-Review process - scenario 1 (journal-dependent)}: The author submits a manuscript to the journal. If the papers passes the stages of editorial decision (appropriateness of style and coherence with the journal's scope). The editor issues a bounty (\emph{bounty issuance}) for the paper review. Fulfillment rules are set in a smart-contract. The bounty prize could correspond to part of the article submission fees and article publication fees requested to the authors by the journal. Reviews fulfilling the smart-contract requirements are validated by the journal editors and voted via QV. When the reviews are accepted (\emph{bounty fulfillment}), reviewers are awarded a token called \emph{ANT}.
+    \item \textbf{Ants-Review process - scenario 2 (community-driven)}: The author submits a manuscript to the pre-print service or to an hypothetical Ants-Review platform. The paper is accepted by the community for revision in its whatever format. The author issues a bounty (\emph{bounty issuance}) for the paper review. Fulfillment rules are set in a smart-contract. The bounty prize could come by a community stake that participates in the peer-review process either as a reviewer or as a reviewer checker. Reviews fulfilling the smart-contract requirements are validated by the Ants-Review community of contributors. When the reviews are accepted (\emph{bounty fulfillment}), reviewers awarded a token called \emph{ANT}. Reviews will be voted by the community via Quadratic Voting.In order to incentive 'fair play' also the review checkers who vote for the best quality reviews will share the final prize from the bounty. Since it is in their own interest to 'bet' on a good review, this gamed system will discourage internal dynamics prompt to favour specific members of the community beyond real personal merit and therefore will fuel ethical behaviour.
 
 \end{enumerate}
-
-
-
-\begin{enumerate}
-\item The author submits a manuscript to the pre-print service or to an hypothetical Ants-Review platform.
-\item The paper is accepted by the community for revision in its whatever format.
-\item The author issues a bounty (\emph{bounty issuance}) for the paper review. Fulfillment rules are set in a smart-contract.
-\item The bounty prize could come by a community stake that participates in the peer-review process either as a reviewer or as a reviewer checker.
-\item Reviews fulfilling the smart\-contract requirements are validated by the Ants-Review community of contributors.
-\item When the reviews are accepted (\emph{bounty fulfillment}), reviewers awarded a token called \emph{ANT}.
-\item Reviews will be voted by the community via Quadratic Voting.
-\item In order to incentive 'fair play' also the review checkers who vote for the best quality reviews will share the final prize from the bounty. Since it is in their own interest to 'bet' on a good review, this gamed system will discourage internal dynamics prompt to favour specific members of the community beyond real personal merit and therefore will fuel ethical behaviour.
-
- \end{enumerate}
 
 \subsection{Implementation}
 
@@ -203,10 +189,10 @@ An AntReview, issued by an author would be seen as a poll, a container where Ant
 \newline Finally, another concept under investigation is Quadratic Funding \cite{LiberalRadicalism}, used by Gitcoin \cite{Gitcoin} to match donations for Grants. This will allow to incentivise prolific Peer-Reviewers and improve the stability of the system together with ideally a reward system to rank the best Peer-Reviewers.
 
 \subsection{Criticism}
-Some criticism towards giving a monetary reward to reviewers tackle the fact that an extrinsic motivation (such as a token system) might decrease the intrinsic motivation that drives researchers to perform scientific contributions. Some experimental studies seem indeed to suggest that reviewers are more interested in reputational forms of recognition \cite{Warne-RewRev}. However, we think that engaging the whole community towards the peer-review process and rewarding each actor in it could diminish these effects.
+Some criticism towards giving a monetary reward to reviewers tackle the fact that an extrinsic motivation (such as a token system) might decrease the intrinsic motivation that drives researchers to perform scientific contributions. Some experimental studies seem indeed to suggest that reviewers are more interested in reputational forms of recognition \cite{Warne-RewRev,ZahIncent} and that material compensation affects the quality of reviews by 'undermining the moral motives that guide referees' behaviour \cite{SquazzIncent}. However, we think that engaging the whole community towards the peer-review process and rewarding each actor in it through gamified forms of reward and alternative voting systems could diminish these effects, but this is a speculation that needs to be experimentally tested.
 
 \subsection{A new community-driven standard?}
-A change is already happening in the publishing industry, especially with new born publishers opening up the review process (BioMed Central, ELife, Frontiers, PeerJ, F1000 Research). As Tennant points out \cite{Tennant2017-F1000R}, if also pre-print platforms integrate peer-review into their platforms, the dissociation of initial scientific dissemination and scientific validation will force publishing industry to adapt in order to justify their added value.
+As Tennant points out\cite{Tennant2017-F1000R}, a change is already happening in the publishing industry, especially with new born publishers opening up the review process (BioMed Central, ELife, Frontiers, PeerJ, F1000 Research). If also pre-print platforms integrate peer-review into their platforms, the dissociation of initial scientific dissemination and scientific validation will force publishing industry to adapt in order to justify their added value.
 In our proposal we posed two possible integrations for Ants-Review, a simpler one which maintains part of the journals' power in the peer-review evaluation and more complex one that completely decouples the peer-review process from the publishers giving it back to the scientific community and applying concepts from mechanism design. This second option, which requires further implementations, is the one we aim at. Indeed, we foresee that the future will evolve towards community-organized peer reviews: peer reviews will be more and more independent from publishers, and researchers will be the ones seeking the papers to review with a reputation build within community and not journals.
 Peer reviews requires a standard: building smart-contracts for peer-reviews might set a first step in this direction and our work seems promising. We hope that soon the value of peer review as 'academic capital' will be recognized by research funders and hiring committees.
 
@@ -232,6 +218,6 @@ The authors declare no competing interests.
 % References will then be sorted and formatted in the correct style.
 %
 \bibliographystyle{splncs04}
-\bibliography{ref1-intro.bib,ref2-peerreview.bib,ref2-relatedwork.bib, ref3-system.bib,ref4-discuss.bib}
+\bibliography{ref1-intro.bib,ref2-peerreview.bib,ref2-relatedwork.bib, ref3-system.bib,ref4-discuss.bib, ref5-extra.bib}
 
 \end{document}
