--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -133,26 +133,27 @@ AntsReviewRoles, to ensure integrity of the system, implements an access managem
 
 \subsubsection{Tokenomics}
 AntsReview integrates few tokens, each of which plays an integral role in the functioning and anonymity of the decentralized protocol.
-\newline Ant, is the primary protocol token and can be staked into an AntReview.
-\newline Ant [see \ref{lst:code}] is implemented by inheriting \emph{ERC20PresetMinterPauser.sol} from OpenZeppelin Library with name \emph{Ant} and symbol \emph{ANT}.
+\newline ANTS, is the primary protocol token and can be staked into an AntReview.
+\newline ANTS [see \ref{lst:code}] is implemented by inheriting \emph{ERC20PresetMinterPauser.sol} from OpenZeppelin Library with name \emph{Ants-Review} and symbol \emph{ANTS}.
 
-\begin{lstlisting}[caption={Ant.sol},label={lst:code},language=Solidity]
+\begin{lstlisting}[caption={ANTS.sol},label={lst:code},language=Solidity]
 /// SPDX-License-Identifier: GPL-3.0
 pragma solidity 0.6.8;
 
 ///@title Ants-Review
 ///@author Nazzareno Massari
-///@notice Ant ERC20 Token
+///@notice ANTS ERC20 Token
 ///@dev All function calls are currently implemented without side effects through TDD approach
 ///@dev OpenZeppelin library is used for secure contract development
 
+import "@openzeppelin/contracts/access/Ownable.sol";
 import "@openzeppelin/contracts/presets/ERC20PresetMinterPauser.sol";
 
 
-contract Ant is ERC20PresetMinterPauser {
+contract ANTS is Ownable, ERC20PresetMinterPauser {
 
   constructor()
-  ERC20PresetMinterPauser("Ant", "ANT")
+  ERC20PresetMinterPauser("Ants-Review", "ANTS")
   public {
 
   }
@@ -165,11 +166,11 @@ The anonymity of an agent in the system is achieved in two ways:
 
 \begin{itemize}
   \item via pseudo-anonimity granted through Ethereum's Externally Owned Accounts (EOA) addresses that can pseudo-obscure the identity of the agent.
-  \item via private transactions allowed by AZTEC Protocol security layer via zkAnt. Future developments will allow to leverage on PLONK\cite{PLONK}proofs, a universal ZK-SNARK construction, to reduce gas costs and improve scalability.
+  \item via private transactions allowed by AZTEC Protocol security layer via zkANTS. Future developments will allow to leverage on PLONK\cite{PLONK}proofs, a universal ZK-SNARK construction, to reduce gas costs and improve scalability.
 \end{itemize}
 
  Externally Owned Accounts (EOA) in Ethereum are controlled by private keys, are 20 bytes long and have no code. An user can send messages from an externally owned account by creating and signing a transaction. The limitation of this type of solution concerning the protocol's privacy is due to the fact that blockchain and transactions are public, therefore the details of transactions are visible to anyone by browsing a block explorer (like Etherscan), and are subjected to data mining that could extract value and identify users in the blockchain.
-\newline To avoid that, Ants-Review will implement zkAnt, an Ant token wrapped into AZTEC Protocol. In the future zkAnt could leverage on zkSNARKS and PLONK, allowing private transactions in the system to maintain the privacy and anonymity of Peer-Reviewers.
+\newline To avoid that, Ants-Review will implement zkANTS, an Ant token wrapped into AZTEC Protocol. In the future zkANTS could leverage on zkSNARKS and PLONK, allowing private transactions in the system to maintain the privacy and anonymity of Peer-Reviewers.
 \newline The AZTEC Protocol was conceived to enable privacy on public blockchains. It uses a series of zero-knowledge proofs (ZK-SNARKs) and homomorphic encryption to validate encrypted transactions.
 \newline ZK-SNARKs (Zero-Knowledge Succinct Non-Interactive Argument of Knowledge) \cite{ZKSNARKs} refers to a proof construction where one can prove possession of certain information, like a secret key, without revealing that information, and without any interaction between prover and verifier.
 \newline Zero-Knowledge \cite{ZeroKnoledge} proof is a mathematical cryptographic method that through value permutations allow one party (the prover) to prove to another (the verifier) the validity of a statement, without revealing the statement itself.
@@ -179,13 +180,13 @@ The anonymity of an agent in the system is achieved in two ways:
 In this session we discuss future developments not yet implemented and implications of AntsReview.
 \subsection{Possible developments}
 An AntReview, issued by an author would be seen as a poll, a container where Anters (members of the Ants-Review Community) can stake ether or ERC20 tokens from DeFi services including Dai \cite{Dai}, Chai \cite{Chai}, ... with the possibility to accrue interest for the duration of an AntReview (1 year on average), via MakerDAO DSR (Dai Saving Rate) \cite{DSR} or Compound \cite{Compound} to cite a few.
- An AntsReview DAO could be formed in the future to allow Ant stakers the ability to participates in a Decentralized Autonomous Organization which will be used to govern important aspects of the decentralized protocol, from smart contracts upgrades to more minor changes in settings across the protocol.
+ An AntsReview DAO could be formed in the future to allow ANTS stakers the ability to participates in a Decentralized Autonomous Organization which will be used to govern important aspects of the decentralized protocol, from smart contracts upgrades to more minor changes in settings across the protocol.
 \newline Hive. When Anters make a deposit into an AntReview, they will instantly receive the Hive token which represents their deposit and the accrued interest it gains over time in the AntReview.
 \newline This token doesn't need to be locked in the network and it can be traded, sold, or held as the Anter desires.
-\newline Hive will be implemented using a similar approach to Ant and Chai, an ERC20 token that accrues interest from MakerDAO's DSR or Compound, with name \emph{Hive} and symbol \emph{HIVE}
-\newline Ideally, but is still under investigation, after the deadline of the AntReview is reached, the Hive token will be burned for Ant and wrapped into zkAnt to promote anonymity and sent between the peer-reviewers that fulfilled the AntReview.
-\newline zkAnt, is an Ant token wrapped into AZTEC Protocol \cite{AZTEC} ZK-SNARKs, that will be extended to PLONK \cite{PLONK} Proof to collapse the gas costs of private transactions on mainnet.
-\newline zkAnt will be implemented via AZTEC 2.0 (still in development) that will allow to securely wrap the Ant Token into zkAnt, allowing private transactions on mainnet and preserving the anonymity of Peer Reviewers.
+\newline Hive will be implemented using a similar approach to Chai, an ERC20 token that accrues interest from MakerDAO's DSR or Compound, with name \emph{Hive} and symbol \emph{HIVE}
+\newline Ideally, but is still under investigation, after the deadline of the AntReview is reached, the Hive token will be burned for ANTS and wrapped into zkANTS to promote anonymity and sent between the peer-reviewers that fulfilled the AntReview.
+\newline zkANTS, is an Ants-Review token wrapped into AZTEC Protocol \cite{AZTEC} ZK-SNARKs, that will be extended to PLONK \cite{PLONK} Proof to collapse the gas costs of private transactions on mainnet.
+\newline zkANTS will be implemented via AZTEC 2.0 (still in development) that will allow to securely wrap the Ants-Review Token into zkANTS, allowing private transactions on mainnet and preserving the anonymity of Peer Reviewers.
 \newline Finally, another concept under investigation is Quadratic Funding \cite{LiberalRadicalism}, used by Gitcoin \cite{Gitcoin} to match donations for Grants. This will allow to incentivise prolific Peer-Reviewers and improve the stability of the system together with ideally a reward system to rank the best Peer-Reviewers.
 
 \subsection{Criticism}
