--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -142,7 +142,7 @@ pragma solidity 0.6.8;
 
 ///@title Ants-Review
 ///@author Nazzareno Massari
-///@notice ANTS ERC20 Token
+///@notice Ants-Review ERC20 Token
 ///@dev All function calls are currently implemented without side effects through TDD approach
 ///@dev OpenZeppelin library is used for secure contract development
 
