--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -118,12 +118,12 @@ AntsReview is the core of the smart contracts written in Solidity \cite{Solidity
 \begin{itemize}
   \item to upload the file containing the requirements of the peer-review and the paper into IPFS\cite{IPFS}.
   \item to specify a deadline in the form of a unix timestamp after which the fulfillment will no longer be accepted.
-  \item to send the amount of ether for the reward.
+  \item to send the amount of Ether for the reward.
 \end{itemize}
 
 AntsReviewRoles, to ensure integrity of the system, implements an access management, leveraging on \emph{AccessControl.sol} by OpenZeppelin Solidity Library \cite{OZ}, through the creation of the Issuer and Peer-Reviewer Roles.
 \newline It also integrates a circuit breaker design pattern via \emph{Pausable.sol} by OpenZeppelin to allow the Pauser Role, that by default is the Owner of the smart contracts, able to pause (or unpause) the functions in case of a security emergency, like an attack to the smart contracts. In this way, only the Issuer can create a new AntReview.
-\newline Once created, an AntReview is available to be fulfilled by Peer-Reviewers, uploading the peer-review on IPFS before the deadline.When the AntReview is accepted by the Issuer, the bounty is paid among Peer-Reviewers.On top of that, the Issuer can cancel the AntReview at any time and withdraw the amount of ether staked.
+\newline Once created, an AntReview is available to be fulfilled by Peer-Reviewers, uploading the peer-review on IPFS before the deadline.When the AntReview is accepted by the Issuer, the bounty is paid among Peer-Reviewers.On top of that, the Issuer can cancel the AntReview at any time and withdraw the amount of Ether staked.
 \newline One of the key aspects of the protocol is the concept of Proof of Existence, introduced by Stuart Haber \& W. Scott Stornetta \cite{TimeStamp-Haber}. Pioneers of the blockchain, cited by the Bitcoin whitepaper\cite{Bitcoin}, they were on a mission to solve the problem of immutability of digital records that became reality with the Blockchain and Bitcoin as its first application. In Ethereum \cite{Ethereum} the concept of immutability is achieved via the blockchain and the proof of work consensus algorithm by a chain of timestamped block merkle tree root hashes that are secured by miners competing computations.
 \newline Ants-Review exploits the advantages of storing the hashes of the peer-reviews into a Merkle Tree \cite{BayerHaber1992} to achieve immutability and efficiency in verifying the data with a complexity of O(logn) for searching through the tree.
 \newline A Merkle tree is a particular type of binary tree, formed by a set of nodes with a large set of leaf nodes at the bottom of the tree representing the hash of the original data, a set of intermediate nodes where each node is the sum of the two children hashes, ending with a single root hash. In order to verify if a specific hash is included into a Merkle Tree by leveraging on \emph{MerkleProof.sol} (OpenZeppelin Library), we need to provide a proof, generated from the leaf of interest, that represents the ramification derived from the leaf, the root hash and, finally, the leaf we want to verify.
@@ -152,7 +152,7 @@ The anonymity of an agent in the system is achieved in two ways:
 \section{Discussions}
 In this session we discuss future developments not yet implemented and implications of AntsReview.
 \subsection{Possible developments}
-An AntReview, issued by an author would be seen as a poll, a container where Anters (members of the Ants-Review Community) can stake ether or ERC20 tokens from DeFi services including Dai \cite{Dai}, Chai \cite{Chai}, ... with the possibility to accrue interest for the duration of an AntReview (1 year on average), via MakerDAO DSR (Dai Saving Rate) \cite{DSR} or Compound \cite{Compound} to cite a few.
+An AntReview, issued by an author would be seen as a poll, a container where Anters (members of the Ants-Review Community) can stake Ether or ERC20 tokens from DeFi services including Dai \cite{Dai}, Chai \cite{Chai}, ... with the possibility to accrue interest for the duration of an AntReview (1 year on average), via MakerDAO DSR (Dai Saving Rate) \cite{DSR} or Compound \cite{Compound} to cite a few.
  An AntsReview DAO could be formed in the future to allow ANTS stakers the ability to participates in a Decentralized Autonomous Organization which will be used to govern important aspects of the decentralized protocol, from smart contracts upgrades to more minor changes in settings across the protocol.
 \newline Hive. When Anters make a deposit into an AntReview, they will instantly receive the Hive token which represents their deposit and the accrued interest it gains over time in the AntReview.
 \newline This token doesn't need to be locked in the network and it can be traded, sold, or held as the Anter desires.
