fix figure 1 ref

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -104,7 +104,7 @@ There are two possible scenarios depending if Ants-Review integrates an existing
 \end{figure}
 
 In the following sections we describe the architecture of the system and its building blocks.
-\newline The Ants-Review Protocol is divided into different modules responsible for the following functionalities as shown in the flow-chart [Fig. \ref{fig:contracts}]:
+\newline The Ants-Review Protocol is divided into different modules responsible for the following functionalities as shown in the flow-chart (See Figure \ref{fig:contracts}):
 
 \begin{itemize}
 \item \emph{AntsReview}, which manages access management and the core system.
