fix token symbol typo

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -89,8 +89,8 @@ Thus, the system acts also as a reputation builder.
 There are two possible scenarios depending if Ants-Review integrates an existing journal or if Ants-Review becomes a platform completely decoupled from journals.
 
 \begin{enumerate}
-    \item \textbf{Ants-Review process - scenario 1 (journal-dependent)}: The author submits a manuscript to the journal. If the papers passes the stages of editorial decision (appropriateness of style and coherence with the journal's scope). The editor issues a bounty (\emph{bounty issuance}) for the paper review. Fulfillment rules are set in a smart-contract. The bounty prize could correspond to part of the article submission fees and article publication fees requested to the authors by the journal. Reviews fulfilling the smart-contract requirements are validated by the journal editors and voted via QV. When the reviews are accepted (\emph{bounty fulfillment}), reviewers are awarded a token called \emph{ANT}.
-    \item \textbf{Ants-Review process - scenario 2 (community-driven)}: The author submits a manuscript to the pre-print service or to an hypothetical Ants-Review platform. The paper is accepted by the community for revision in its whatever format. The author issues a bounty (\emph{bounty issuance}) for the paper review. Fulfillment rules are set in a smart-contract. The bounty prize could come by a community stake that participates in the peer-review process either as a reviewer or as a reviewer checker. Reviews fulfilling the smart-contract requirements are validated by the Ants-Review community of contributors. When the reviews are accepted (\emph{bounty fulfillment}), reviewers awarded a token called \emph{ANT}. Reviews will be voted by the community via Quadratic Voting.In order to incentive 'fair play' also the review checkers who vote for the best quality reviews will share the final prize from the bounty. Since it is in their own interest to 'bet' on a good review, this gamed system will discourage internal dynamics prompt to favour specific members of the community beyond real personal merit and therefore will fuel ethical behaviour.
+    \item \textbf{Ants-Review process - scenario 1 (journal-dependent)}: The author submits a manuscript to the journal. If the papers passes the stages of editorial decision (appropriateness of style and coherence with the journal's scope). The editor issues a bounty (\emph{bounty issuance}) for the paper review. Fulfillment rules are set in a smart-contract. The bounty prize could correspond to part of the article submission fees and article publication fees requested to the authors by the journal. Reviews fulfilling the smart-contract requirements are validated by the journal editors and voted via QV. When the reviews are accepted (\emph{bounty fulfillment}), reviewers are awarded a token called \emph{ANTS}.
+    \item \textbf{Ants-Review process - scenario 2 (community-driven)}: The author submits a manuscript to the pre-print service or to an hypothetical Ants-Review platform. The paper is accepted by the community for revision in its whatever format. The author issues a bounty (\emph{bounty issuance}) for the paper review. Fulfillment rules are set in a smart-contract. The bounty prize could come by a community stake that participates in the peer-review process either as a reviewer or as a reviewer checker. Reviews fulfilling the smart-contract requirements are validated by the Ants-Review community of contributors. When the reviews are accepted (\emph{bounty fulfillment}), reviewers awarded a token called \emph{ANTS}. Reviews will be voted by the community via Quadratic Voting.In order to incentive 'fair play' also the review checkers who vote for the best quality reviews will share the final prize from the bounty. Since it is in their own interest to 'bet' on a good review, this gamed system will discourage internal dynamics prompt to favour specific members of the community beyond real personal merit and therefore will fuel ethical behaviour.
 
 \end{enumerate}
 
