--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -105,9 +105,9 @@ There are two possible scenarios depending if Ants-Review integrates an existing
 \small
 \textbf{AntsReview} is the core of the protocol, it implements a bounty system with the functions listed.
 \textbf{AntsReviewRoles} is the module inherited by AntsReview, that manages the access control of the protocol, adding and removing issuers and peer-reviewers.
-\textbf{ANTS} is the native token used in the protocol that inherit the ERC20PresetMinterPauser library from OpenZeppelin, is linked to AntsReview and to Aztec Protocol to be wrapped into zkANTS to implement private transactions on Ethereum.
-\textbf{IPFS} represent the integration with IPFS to upload the paper, requirements and peer-reviews and store the hash as proof of existence into AntsReview.
-\textbf{De-Fi} represent the integration with De-Fi services like Dai and Chai, to be used as token in the protocol. (\textbf{OpenZeppelin}) is the library used by the protocol for secure contract development, with the modules listed. 
+\textbf{ANTS} is the native token used in the protocol that inherits the \textbf{ERC20PresetMinterPauser} library from OpenZeppelin, it is linked to AntsReview and to Aztec Protocol to be wrapped into \emph{zkANTS} to implement private \emph{ANTS} transactions on Ethereum.
+\textbf{IPFS} represent the integration with IPFS to upload the paper, requirements and peer-reviews and store the hash as \emph{proof of existence} into AntsReview.
+\textbf{De-Fi} represent the integration with De-Fi services like \emph{Dai} and \emph{Chai}, to be used as token in the protocol. (\textbf{OpenZeppelin}) is the library used by the protocol for secure contract development, with the modules listed.
 \end{figure}
 
 In the following sections we describe the architecture of the system and its building blocks.
